2008-01-30  Thomas Schwinge  <tschwinge@gnu.org>

	* amd64/bits/wordsize.h: New file, from today's glibc CVS HEAD.
	* amd64/Makefile.am (noinst_HEADERS): Add it.
	* ia32/bits/wordsize.h: New file, from today's glibc CVS HEAD.
	* ia32/Makefile.am (noinst_HEADERS): Add it.
	* headers.m4: Link it.
	* README: Document it.

2008-01-26  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am: Typo fixes.

2004-11-30  Neal H. Walfield  <neal@gnu.org>

	* compiler.h: New file.
	* headers.m4: Set up compiler.h.

2004-10-29  Marcus Brinkmann  <marcus@gnu.org>

	* powerpc/bits/atomic.h: Include the common powerpc version from
	GLIBC (#include_next won't work in our setup).
	* powerpc64/bits/atomic.h: Likewise.

	* Initial commit.
